--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,7 @@
       @apply h-7 hover:scale-125 cursor-pointer transition-all duration-150 ease-out;
    }
    .profilePostSize {
-      @apply w-[280px] h-[280px];
+      @apply w-[120px] h-[120px] sm:w-[280px] sm:h-[280px];
    }
 }
 
